--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -29,6 +29,12 @@
     -moz-user-select: none; /* 适用于 Firefox */
     -ms-user-select: none; /* 适用于旧版 IE/Edge */
   }
+  body{
+    user-select: none; /* 适用于大多数现代浏览器 */
+    -webkit-user-select: none; /* 适用于 Webkit (Chrome, Safari) */
+    -moz-user-select: none; /* 适用于 Firefox */
+    -ms-user-select: none; /* 适用于旧版 IE/Edge */
+  }
   .slow-appear {
     opacity: 0;
     transition: opacity 2s ease-in-out;
@@ -43,3 +49,9 @@
   .move {
     transition: transform 0.5s ease-in-out;
   }
+  :focus-visible {
+    outline: none !important;
+}
+.btnGClass{
+  top: inherit            !important; 
+}
