--- a/src/packages/theme/formEditor/buttonGroupCom.scss
+++ b/src/packages/theme/formEditor/buttonGroupCom.scss
@@ -2,4 +2,28 @@
 @include b(buttonGroupCom) {
   margin-right: 3px;
   height: 100% !important;
+  --el-menu-item-height: 100%;
+  --el-menu-horizontal-height: 20px;
+  --van-tabbar-height: 25px;
+  --van-submit-bar-height: 25px;
+  .el-sub-menu__title {
+  }
+  .el-dropdown {
+    background: none !important;
+  }
+  .el-tooltip__trigger {
+    background: none !important;
+    border: none !important; //
+  }
+  .vxe-pulldown--content {
+    height: 100%;
+  }
+}
+@include b(buttonMenuCom) {
+  .el-menu-item {
+    height: 25px;
+  }
+  .el-menu-item:hover{
+    background: none !important;
+  }
 }
