--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -121,3 +121,20 @@ li {
 .align-start{
   align-items: flex-start;
 }
+.w-full{
+  width: 100%;
+}
+
+.flex-1{
+  flex: 1;
+}
+.flex-2{
+  flex: 2;
+}
+.flex-3{
+  flex: 3;
+}
+
+.bg-red{
+  background-color: rgb(100, 100, 100);
+}
