--- a/src/packages/theme/formEditor/index.scss
+++ b/src/packages/theme/formEditor/index.scss
@@ -41,3 +41,4 @@ $namespace: 'Everright-formEditor';
 @use './ConfigSubformDefaultValueComponent';
 @use './tabCom';
 @use './buttonGroupCom';
+@use './Home.scss';
