--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -145,3 +145,16 @@ li {
 .overflow-hidden{
   overflow: hidden;
 }
+
+.Everright-formEditor-selectElement__mask{
+  display: none !important;
+}
+
+.Everright-formEditor-Canves__wrap{
+  /* display: grid; */
+}
+.el-row{
+  flex:1
+}
+.ER-element{
+}
