--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -180,3 +180,9 @@ li {
 .pointer{
   cursor: pointer;
 }
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
