--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -204,3 +204,14 @@ li {
   height: 100%;
   width: 100%;
 }
+.vxe-form--wrapper{
+  display: block !important;
+  height: 100%;
+  width: 100%;
+}
+.vxe-form--wrapper{
+  display: block;
+}
+.vxe-form--item-row{
+  display: block;
+}
