--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -280,3 +280,6 @@ li {
 .vxe-form--item-content{
   padding-bottom: 5px !important;
 }
+/* .Everright-formEditor-TabsLayout .el-tabs__content{
+  height: 0px !important;
+} */
