--- a/src/audit/styles/app.scss
+++ b/src/audit/styles/app.scss
@@ -1,4 +1,4 @@
-@import "@/audit/styles/variables.module.scss";
+@use "@/audit/styles/variables.module.scss" as *;;
 
 .fenye {
   height: $FenyeHeight;
