--- a/src/packages/theme/formEditor/SelectElement.scss
+++ b/src/packages/theme/formEditor/SelectElement.scss
@@ -46,7 +46,7 @@
     font-size: 20px;
     margin: 0 !important;
   }
-  @include e((copyIcon, copy, widthScale, tableOperator, charulieIcon, charuhang, charuhangIcon, selectParent, dragIcon, addCol)) {
+  @include e((copyIcon, copy, widthScale,heightScale, tableOperator, charulieIcon, charuhang, charuhangIcon, selectParent, dragIcon, addCol)) {
     border-radius: 4px;
     //box-shadow: 0 2px 6px #00000040;
     background: $primary-color;
