--- a/src/packages/theme/formEditor/SelectElement.scss
+++ b/src/packages/theme/formEditor/SelectElement.scss
@@ -7,21 +7,22 @@
   @include e(mask) {
     content: ' ';
     display: block;
-    position:absolute;
+    position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    margin:auto;
+    margin: auto;
     width: 100%;
     height: 100%;
     z-index: 99;
     //height: calc(100vh - 124px);
   }
-  &.sortable-ghost,&.sortable-drag {
-    background: #F2F8FF !important;
+  &.sortable-ghost,
+  &.sortable-drag {
+    background: #f2f8ff !important;
   }
-  @include e((hover,isScale)){
+  @include e((hover, isScale)) {
     outline: 1px dashed $primary-color !important;
     //background: #F2F8FF !important;
     //&>.#{$namespace}-selectElement__topLeft,&>.#{$namespace}-selectElement__topRight,&>.#{$namespace}-selectElement__bottomRight {
@@ -34,19 +35,35 @@
   @include when(Selected) {
     outline: 1px solid $primary-color;
     //background: none !important;
-    &>.#{$namespace}-selectElement__topLeft,&>.#{$namespace}-selectElement__topRight,&>.#{$namespace}-selectElement__bottomRight {
+    & > .#{$namespace}-selectElement__topLeft,
+    & > .#{$namespace}-selectElement__topRight,
+    & > .#{$namespace}-selectElement__bottomRight {
       display: flex;
     }
   }
   @include when(Warning) {
-    outline: 1px solid #FD3E3E;
+    outline: 1px solid #fd3e3e;
   }
   @include e(dragIcon) {
     padding: 0;
     font-size: 20px;
     margin: 0 !important;
   }
-  @include e((copyIcon, copy, widthScale,heightScale, tableOperator, charulieIcon, charuhang, charuhangIcon, selectParent, dragIcon, addCol)) {
+  @include e(
+    (
+      copyIcon,
+      copy,
+      widthScale,
+      heightScale,
+      tableOperator,
+      charulieIcon,
+      charuhang,
+      charuhangIcon,
+      selectParent,
+      dragIcon,
+      addCol
+    )
+  ) {
     border-radius: 4px;
     //box-shadow: 0 2px 6px #00000040;
     background: $primary-color;
@@ -54,6 +71,7 @@
     height: 24px;
     color: #fff;
     padding: 0;
+    z-index: 100;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +82,7 @@
   @include e(widthScale) {
     cursor: col-resize;
   }
-  @include e((topLeft,topRight,bottomRight)) {
+  @include e((topLeft, topRight, bottomRight)) {
     position: absolute;
     bottom: 0;
     height: 30px;
@@ -72,7 +90,7 @@
     //display: flex;
     //opacity: 0;
     align-items: center;
-    z-index: 2;
+    z-index: 100;
   }
   @include e((topLeft)) {
     left: 1px;
