--- a/src/packages/theme/formEditor/Config.scss
+++ b/src/packages/theme/formEditor/Config.scss
@@ -22,7 +22,7 @@
   .el-tabs {
     .el-tabs__header {
       background:none;
-      padding: 16px 0;
+      // padding: 16px 0;
     }
     &,.el-tabs__header,.el-tabs__item{
       border: none !important;
