--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -1,7 +1,11 @@
 /* src/assets/tailwind.css */
 
 /* @import 'tailwindcss'; */
+/* these are necessary styles for vue flow */
+@import '@vue-flow/core/dist/style.css';
 
+/* this contains the default theme, these are optional styles */
+@import '@vue-flow/core/dist/theme-default.css';
 @keyframes slowFade {
     0% { opacity: 0; transform: scale(0.5); }
     100% { opacity: 1; transform: scale(1); }
