--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -422,3 +422,10 @@ z-index: 200;
   width: 100%;
   display: flex;
 }
+.vxe-cell--title{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
