--- a/src/mainStyle.css
+++ b/src/mainStyle.css
@@ -450,5 +450,27 @@ z-index: 200;
 
 
 .xe-table-current-row{
-  background-color: RGB(248, 248, 249) !important;
+  background-color: rgb(235, 235, 238) !important;;
+}
+
+.col--selected{
+  box-shadow: none !important;
+}
+.vxe-header-cell--wrapper{
+  height: 100%;
+  
+}
+
+.custom-button {
+  background-color: #f0f2f5;
+  border: 1px solid #d9d9d9;
+  color: #333;
+  padding: 6px 12px;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+.custom-button:hover {
+  background-color: #e6f7ff;
+  border-color: #91d5ff;
+  color: #1890ff;
 }
